NegativeNumAddSubtract/src/sample/mainwindow.fxml
<?import javafx.geometry.Insets?>
<?import javafx.scene.control.Button?>
<?import javafx.scene.control.ScrollPane?>
<?import javafx.scene.layout.*?>
<GridPane fx:id="mainGridpane" xmlns:fx="http://javafx.com/fxml" fx:controller="sample.Controller"
          hgap="10" vgap="10">
    <padding>
        <Insets topRightBottomLeft="20" />
    </padding>
    <Button text="New Test" onAction="#newTest" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
    <ScrollPane GridPane.rowIndex="1" GridPane.columnIndex="0" prefWidth="400" prefHeight="300">
        <VBox spacing="10" fx:id="vboxQuest">

        </VBox>
    </ScrollPane>
    <Button text="Submit" onAction="#showScore" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
</GridPane>
